Sun Aug 11 10:09:03 CEST 2013
akonadi-1.9.0-i486-1_microlinux.txz: Upgraded.
attica-0.4.1-i486-1_microlinux.txz: Upgraded.
shared-desktop-ontologies-0.10.0-i486-1_microlinux.txz: Upgraded.
virtuoso-ose-6.1.6-i486-1_microlinux.txz: Upgraded.
+--------------------------+
Fri Aug  9 21:15:20 CEST 2013
jdk-7u25-i586-1_microlinux.txz: Added.
soprano-2.9.0-i486-1_microlinux.txz: Upgraded.
+--------------------------+
Fri Aug  9 18:47:52 CEST 2013
	Started to work on the Microlinux Enterprise Workstation. The idea behind
	MLWS is to build a no-nonsense, one-app-per-task KDE desktop with sensible
	default settings and a minimum of cruft. Ideally, some of KDE's Rube Goldberg
	apps like KMail, Amarok and KTorrent will be replaced by some more
	lightweight stuff.
user-settings-console-1.0-noarch-1_microlinux.txz: Added.
+--------------------------+