@@ -1,0 +1,1 @@
+qt-everywhere-opensource-src-*.tar.gz
