@@ -1,0 +1,10 @@
+
+if [ -x sbin/ldconfig ]; then
+  chroot . /sbin/ldconfig 2> /dev/null
+fi
+
+if [ -x /usr/bin/update-desktop-database ]; then
+  /usr/bin/update-desktop-database /usr/share/applications >/dev/null 2>&1
+fi
+
+
